2012-10-07  Ramon Casero  <rcasero@gmail.com>

	* matlab/VectorWrapper.h: (v0.3.0)
	* matlab/VectorWrapper.hxx: (v0.2.0)

	- Add functions ItkSizeCommonReadSize() and
	ItkSizeCommonReadHalfSize().

	* matlab/MatlabImportFilter.h: (v0.5.0)
	* matlab/MatlabImportFilter.hxx: (v0.5.0)

	- Add functions GetArraySize() and GetArrayHalfSize(). They
	simplify having to run mxGetNumberOfDimensions() and
	mxGetDimensions(), and then casting the result into e.g. itk::Size
	to pass it to ITK.

	- Add function GetArrayArgumentAsVector(). This is the equivalent
	to the linearising operator A(:) in Matlab.

	* matlab/VectorWrapper.h: (v0.2.1)
	* Add matlab/VectorWrapper.hxx: (v0.1.0)

	- Separate declaration from definition of the functions and
	methods, to make the code more readable.

	* matlab/GerardusCommon.h: (v0.9.0)

	- Add printSeq(), function to print the content of any sequence
	that supports input iterators, e.g. std::vector.

2012-10-06  Ramon Casero  <rcasero@gmail.com>

	* matlab/CgalToolbox/CgalInSurfaceTriangulation.cpp: (v0.2.2)

	- VectorWrapper has changed completely, use the new syntax.

	- MatlabImport has changed the methods to read a row vector, use
	the new syntax.

	* matlab/VectorWrapper.h: (v0.2.0)

	- Full rewrite of the VectorWrapper, as it was not quite right. We
	need 3 templates: VectorValueType for the type of each element in
	the output vector, VectorType for the output vector itself, and
	MatlabValueType for the type the data has in Matlab. This is
	because the element type in the vector may be different from the
	data type the user is passing from Matlab.

	- Add auxiliary functions where we put the code to actually read
	the Matlab data into a vector. The partial specialisation of
	VectorWrapper calls this auxiliary function with the correct
	templates. This means that we only need to write the reading code
	once per type of vector, and then we only need to add a small
	snippet for each new instance. For example, CGAL vectors are